--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -66,3 +66,62 @@
   	}
 	}
 }
+//===================== search =================================
+.search {	
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	min-height: 533px;
+}
+
+.container {
+}
+.search__inner {
+	padding: 155px 0 100px;
+	color: #ffffff;
+	text-align: center;	
+	&-title {
+		font-size: 48px;
+		line-height: 40px;
+		font-weight: 700;
+		margin-bottom: 32px;
+	}
+	&-text {
+		font-size: 20px;
+		font-weight: 500;
+		line-height: 20px;
+		margin-bottom: 55px;
+	}
+	&-form {
+		max-width: 570px;
+		margin: 0 auto;
+		position: relative;
+		input {
+			display: block;			
+			width: 100%;						
+			border-radius: 4px;
+			box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+			height: 56px;
+			border: none;			
+			font-size: 14px;
+			line-height: 30px;
+			font-weight: 500;
+			padding-left: 25px;
+			padding-right: 60px;
+			&::placeholder {
+				color:#90a4ae;
+				font-weight: 500;
+			}
+		}
+		button {
+			position: absolute;
+			border: none;
+			border-radius: 4px;
+			background-color: transparent;
+			right: 20px;
+			top: 16px;		
+		}
+	}
+}
+
+
