--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -18,7 +18,7 @@ ul,li {
 }
 body {
 	font-family: 'Roboto', sans-serif;
-	font-size: 15px;
+	font-size: 14px;
 	font-weight: 400;
 	line-height: 24px;
 	color: $text;	
@@ -27,4 +27,26 @@ body {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 15px;
+}
+.container-fluid {
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 30px;	
+}
+@media (max-width:720px){
+	.container-fluid {
+		padding: 0 15px;	
+	}
+}
+.title {
+	color: $bg;
+	font-size: 36px;
+	line-height: 60px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.rate__star {
+	display: inline-block;
+	margin-right: 13px;
 }
