--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -277,6 +277,71 @@
 		}
 	}
 }
+//========================= advantages ======================================
+.advantages {
+	background-color: $bg;
+	padding: 110px 0;
+}
+.advantages__title {
+	color: #ffffff;
+}
+.advantages__inner {
+	display: flex;
+	justify-content: space-between;
+}
+.advantages__item {
+	max-width: 370px;
+	text-align: center;
+	padding: 0 15px;
+	
+	&:hover {
+		.advantages__item-images {
+			background-color: $green;
+		}
+		.advantages__item-title {
+			color: $green;
+		}
+		.advantages__item-images {
+			g {
+				fill: #ffffff;
+			}
+		}
+	}
+	&-images {
+		width: 114px;
+		height: 114px;
+		background-color: #ffffff;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto 30px;
+		transition: all .3s;
+		svg {width: 50px;}
+
+	}
+	&-title {
+		font-size: 24px;
+		font-weight: 500;
+		color: #ffffff;
+		margin-bottom: 25px;
+		transition: all .3s;
+	}
+	&-text {
+		font-size: 15px;
+		line-height: 24px;
+		color: #b0bec5;
+	}
+}
+.icosvg-1 {
+	svg {width: 70px; }
+}
+.icosvg-2 {
+	svg {width: 72px; }
+}
+.icosvg-3 {
+	svg {width: 72px; }
+}
 
 
 
