--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -380,7 +380,36 @@
 		max-width: 225px;
 	}
 }
+//=============== tutorial ==========================
+.tutorial {
+	padding: 70px 0 120px;
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__item {
+		max-width: 370px;
+		width: 100%;
+	}
+	
+	&__item-images {
+		min-height: 270px;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+	}
+	&__item-title {
+		padding: 30px 10px;
+		font-size: 24px;
+		font-weight: 700;
+		text-align: center;
+		color: $bg;
+		background-color: #f8f8f8;
+		
+		
 
+	}
+}
 
 
 
