--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -410,6 +410,166 @@
 
 	}
 }
+//============ footer ==========================
+.footer {
+	background-color: $bg;
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		padding: 100px 0 80px;
+	}
+}
+.footer__content {
+}
+
+
+.footer__col {
+	max-width: 270px;
+	width: 100%;
+	&-menu {
+		max-width: 220px;
+	}
+	&-title {
+		font-family: 'Raleway', sans-serif;
+		font-size: 22px;
+		line-height: 24px;
+		color: #ffffff;
+		font-weight: 700;
+		padding-bottom: 26px;
+		margin-bottom: 30px;
+		position: relative;
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 2px;
+			width: 51px;
+			height: 3px;
+			background-color: $green;
+		}
+	}
+	&-text {
+		color: #b7c3c8;
+		margin-bottom: 30px;
+	}
+	&-list {
+		a {
+			margin-bottom: 15px;
+			color: #b7c3c8;
+			padding-left: 22px;
+			position: relative;
+			&::before {
+				content: '\f105';
+				font-family: 'icomoon' !important;
+				font-size: 18px;
+				color: $green;
+				position: absolute;
+				left: 0;
+			}
+		}
+	}
+}
+.footer__info {
+	margin-top: 18px;
+	padding-left: 30px;
+	font-size: 14px;
+	font-weight: 500;
+	color: #ffffff;
+	position: relative;
+	&::before {
+		content: '\e947';
+		font-family: 'icomoon' !important;
+		font-size: 18px;
+		color: $green;
+		position: absolute;
+		left: 0;
+	}
+}
+.footer__info-phone {
+	&::before {
+		content: '\f095';	
+	}	
+}
+.footer__social-link {
+	margin-bottom: 33px;
+	li {
+		display: inline-block;
+		& + li {
+			margin-left: 7px;
+		} 
+	}
+	a {
+		width: 28px;
+		height: 28px;
+		background-image: url(../images/css_sprites.png);
+	}
+}
+.link-twitter {
+	background-position: -28px 0;
+}
+.link-youtube {
+	background-position: 0 -28px;
+}
+.link-pinterest {
+	background-position: -28px -28px;
+}
+.link-linledin {
+	background-position: -56px 0;
+}
+.footer__form {
+	position: relative;
+	input {
+		border: none;
+		background-color: #2f3c43;
+		display: block;
+		width: 100%;
+		height: 40px;		
+		font-size: 14px;
+		color: #ffffff;
+		padding-left: 13px;
+		padding-right: 50px;
+		
+		&::placeholder {
+			color: #697378;
+		}
+	}
+	button {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		background-color: $green;
+		border: none;
+		height: 40px;
+		width: 43px;
+		cursor: pointer;
+		&::before {
+			content: '\f124';
+			font-family: 'icomoon' !important;
+			font-size: 20px;			
+			color: #fff;
+			position: absolute;
+			top: 8px;
+			left: 13px;
+			
+		}
+	}
+}
+.footer__form-title {
+	font-size: 20px;
+	line-height: 36px;
+	color: #ffffff;
+	margin-bottom: 17px;
+}
+.footer__copy {
+	border-top: 1px solid #424d53;
+}
+.footer__copy-text {
+	text-align: center;
+	font-size: 15px;
+	line-height: 36px;
+	color: #919699;
+	padding: 25px 0;
+}
 
 
 
