--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,19 +2,12 @@
 @import '_global';
 @import '_fonts';
 
-// .header {
-// }
-// .header__top {
-// }
-
 .header__top-inner {
 	display: flex;
 	justify-content: space-between;
 	height: 90px;
 	align-items: center;
 }
-// .header__logo {
-// }
 .header__text {
 	margin-left: auto;
 	margin-right: 50px;
@@ -22,12 +15,14 @@
 		color: $red;
 	} 
 }
-// .header__phone {
-// }
-// .header__box {
-// }
-// .basket {
-// }
+.header__box {
+	display: flex;
+	align-items: center;
+	
+}
+.header__box > div{
+	margin-right: 15px;
+}	
 .header__btn {
 	width: 72px;
 	padding: 4px;
@@ -43,6 +38,16 @@
 .header__btn-register {
 	background-color: $red;
 	margin-left: 7px;
+}
+.header__btn-logout {
+	background-color: $red;
+}
+.switched-off {
+	display: none;
+}
+.header__btn-menu,
+.menu__btn {
+	display: none;
 }
 .header__menu {
 	background-color: $bg;
@@ -66,6 +71,283 @@
   	}
 	}
 }
+.header__cicrcle {
+	width: 34px;
+	height: 34px;
+	border-radius: 50%;
+	background-color: #f5f5f5;
+	position: relative;
+	display: none;
+	&.active {
+		display: block;
+	}
+	&::before {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: #a0a0a0;
+		font-size: 14px;
+	}
+	& + .header__cicrcle {
+		margin-left: 15px;
+	}
+	span {
+		position: absolute;
+		width: 18px;
+		height: 18px;
+		border-radius: 50%;
+		text-align: center;
+		line-height: 18px;
+		right: -7px;
+		top: -7px;
+		font-size: 11px;
+		color: #ffffff;
+	}
+	&:hover {
+		&::before {
+			color: $bg;
+		}
+	}
+}
+.notification {
+	span {
+		background-color: $not-c;
+	}
+}
+.message {
+	span {
+		background-color: $mes-c;
+	}
+}
+.basket__box,
+.notification__box,
+.message__box {
+	position: relative;
+	height: 90px;	
+	margin-top: 55px;	
+	&:hover {
+		.message__menu {				
+			border-top-width: 1px;
+			border-bottom-width: 1px;
+			max-height: 400px;
+		}
+		.message__menu-item {
+			padding-top: 15px;
+			padding-bottom: 22px;
+		}
+		.basket__item {
+			padding-top: 23px;
+			padding-bottom: 23px;
+		}
+	}
+}
+// .basket__menu,
+.message__menu {
+	position: absolute;	
+	z-index: 1;
+	background-color: #ffffff;	
+	border: 1px solid #d3d3d3;
+	border-top-width: 0;
+	border-bottom-width: 0;	
+	width: 270px;
+	top: 63px;
+	left: -225px;	
+	transition: max-height .3s, border-top-width .3s, border-bottom-width .3s;
+	max-height: 0; 
+	overflow: hidden; 
+}
+.message__menu-item {
+	padding: 15px 20px 22px;
+	padding-top: 0;
+	padding-bottom: 0;
+	border-bottom: 1px solid #e0e0e0;
+	display: flex;
+	align-items: center;
+	position: relative;
+	transition: padding-top .3s, padding-bottom .03s;
+	&:last-child {
+		border-bottom: none;
+	}
+	&::before {
+		position: absolute;
+		font-size: 16px;
+		color: #b0bec5;
+		top:30px;
+		right: 30px;
+	}	
+}
+.message__menu-item.icon-bell-o.notification-not-read {
+	&::before {
+		color: $not-c;
+	}	
+}
+.message__menu-item.icon-envelope-o.message-not-read {
+	&::before {
+		color: $mes-c;
+	}
+}
+.message__images {
+	border-radius: 50%;
+	margin-right: 20px;
+	width: 48px;
+	height: 48px;
+}
+.message__info {
+	line-height: 23px;
+}
+.message__info-person {
+	font-size: 12px;
+	font-weight: 700;
+	color: $bg;
+}
+.message__info-message {
+	font-size: 11px;
+	color: $green;
+}
+.message__info-date {
+	font-size: 10px;
+	color: #707070;
+}
+.basket {
+	span {
+		background-color: $bas-c;
+	}
+}
+.basket__item {
+	padding: 23px;
+	padding-top: 0;
+	padding-bottom: 0;
+	border-bottom: 1px solid #e0e0e0;
+	display: flex;
+	align-items: center;
+	transition: padding-top .3s, padding-bottom .03s;
+	&:last-child {
+		border-bottom: none;
+	}
+}
+.basket__images {
+	margin-right: 15px;
+	width: 73px;
+	height: 57px;
+}
+.basket__info {
+	line-height: 23px;
+}
+.basket__info-name {
+	font-weight: 500;
+	color: $bg;
+}
+.basket__info-thema {
+	font-size: 12px;
+	color: $green;
+}
+.basket__info-price {
+	font-size: 16px;
+	font-weight: 500;
+	color: #000;
+}
+.basket__summ {
+	padding: 18px 18px 14px;
+}
+.basket__title {
+	font-size: 16px;
+	font-weight: 700;
+	color: $bg;
+}
+.basket__summ-total {
+	margin: 0 123px 19px 12px;
+	display: inline-block;
+}
+.basket__summ-price {	
+	display: inline-block;
+	margin-bottom: 19px;
+}
+.basket__btn {
+	padding: 12px 0px;
+	width: 100px;
+	font-size: 14px;
+	font-weight: 700;
+	color: #ffffff;
+	background-color: $bas-c;
+	text-align: center;
+
+}
+.basket__btn-checkout {
+	background-color: #e85647;
+	width: 120px;
+	margin-left: 7px;
+}
+.user {
+	margin-left: 5px;
+	margin-right: 25px;
+	padding-right: 20px;
+	position: relative;
+	&::before {
+		position: absolute;
+		content: "\f107";
+		font-family: 'icomoon';
+		font-size: 16px;
+		color: #707070;
+		top: 0;
+		right: 0;
+	}
+	&__inner {
+		display: flex;
+		align-items: center;
+	}
+	&__images {
+		margin-right: 15px;
+		width: 34px;
+		height: 34px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	&_info {
+		font-size: 14px;
+		line-height: 24px;
+	}
+	&__name {		
+		font-weight: 500;
+		color: #222222;
+	}
+	&__money {
+		font-weight: 700;
+		color: $green;
+	}
+}
+.user__box {
+	position: relative;
+	height: 90px;	
+	margin-top: 42px;
+	margin-left: 4px;
+	&:hover {
+		.user__menu {	
+			padding: 20px;
+			border-width: 1px;
+			height: auto;
+		}
+	}
+}
+.user__menu {
+	position: absolute;	
+	z-index: 1;
+	background-color: #ffffff;
+	padding: 0 20px;
+	border: 0px solid #d3d3d3;	
+	width: 158px;
+	top: 69px;
+	left: 19px;	
+	transition: height .3s, padding .3s, border-width .3s;
+	height: 0; 
+	overflow: hidden; 
+	a {
+		font-size: 12px;
+		line-height: 36px;
+		color: $text;
+	}
+}
+
 //===================== search =================================
 .search {	
 	background-repeat: no-repeat;
@@ -916,9 +1198,9 @@ button.icon-sort {
 	justify-content: space-between;
 	margin-bottom: 30px;
 }
-.pagination {
+// .pagination {
 	
-}
+// }
 .pagination__list {
 	li {display: inline-block;
 		& + li {
@@ -942,10 +1224,9 @@ button.icon-sort {
 		}
 	}
 }
-
-
 // .active {
 // }
+@import '_media';
 
 
 
