--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1850,13 +1850,115 @@ button.icon-sort {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	// input:last-child {
-	// 	margin-left: 26px;
-	//}
+}
+//====================== end contact ==================================
+//======================= start sttings ===============================
+.settings {
+	padding-bottom: 100px;
+}
+.product-one__tabs.settings__tabs {
+	display: flex;
+	.tabs {
+		max-width: 270px;
+		width: 100%;
+		margin-right: 30px;
+		border: 1px solid #dedede;
+		border-bottom: none;
+		text-align-last: left;
+		display: block;
+		height: 100%;
+		span {
+			display: block;
+			background-color: #ffffff;
+			border-bottom: 1px solid #dedede;
+			padding: 17px 17px 17px 50px;
+			color: #707070;
+			font-size: 14px;
+			font-weight: 500;
+			&.tab-active {
+				border-bottom: 3px solid $green;
+				color: #37474f;
+				&::before {
+					color: $green;
+					font-weight: 800;
+				}
+			}
+			&::before {
+				left: 24px;
+				color: #444444;
+			}
+		}
+	}
+	.tab-content {
+		width: 100%;
+		padding: 0;
+		background-color: transparent;	
+	}
+}
+.tabs .tab +.tab {
+	border-left: none;
+}
+.page-box {
+	background-color: #ffffff;
+	min-height: 100%;
+}
+.page-box__title {
+	padding: 18px 38px;
+	font-size: 24px;
+	font-weight: 500;
+	color: $bg;
+	//  
+	border-bottom: 1px solid #dedede;
+}
+.page-box__content {
+	padding: 33px 38px;	
+}
+.settings__line {
+	margin-bottom: 23px;
+	display: flex;
+	align-items: center;
+	label {
+		width: 260px;
+		color: #444444;
+	}
+	input {
+		max-width: 540px;
+		width: 100%;
+		height: 40px;
+		background-color: #f9f9f9;
+		color: #000000;
+		border: 1px solid #dcdcdc;
+		padding: 0 10px;
+	}
+	select {
+		max-width: 540px;
+		width: 100%;
+		height: 40px;
+		background-color: #f9f9f9;
+		color: #000000;
+		border: 1px solid #dcdcdc;
+		padding: 0 10px;
+		font-size: 14px;
+		color: #707070;	
+	}
+	div {
+		max-width: 540px;
+		width: 100%;
+	}
+	button {
+		height: 46px;
+		width: 108px;
+		background-color: $green;
+		color: #ffffff;
+		font-weight: 500;
+		text-transform: uppercase;		
+		margin-bottom: 3px;
+		margin-bottom: 49px;
+		border: none;
+	}	
 }
 
-//====================== end contact ==================================
-
+//======================= end sttings ===============================
 @import '_media';
 
 
