--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1852,7 +1852,7 @@ button.icon-sort {
 	width: 100%;
 }
 //====================== end contact ==================================
-//======================= start sttings ===============================
+//======================= start settings ===============================
 .settings {
 	padding-bottom: 100px;
 }
@@ -1875,6 +1875,7 @@ button.icon-sort {
 			color: #707070;
 			font-size: 14px;
 			font-weight: 500;
+			position: relative;
 			&.tab-active {
 				border-bottom: 3px solid $green;
 				color: #37474f;
@@ -1957,8 +1958,227 @@ button.icon-sort {
 		border: none;
 	}	
 }
+//======================= end settings ===============================
+//======================= start profile ==============================
+.profile__inner {
+	display: flex;
+	margin-bottom: 30px;
+}
+.profile__aside {
+	max-width: 270px;
+	width: 100%;
+	margin-right: 30px;
+}
+.profile-status {
+	font-size: 13px;
+	color: #707070;
+	border: 1px solid #d3d3d3;
+	padding: 6px 9px 5px 30px;
+	position: relative;
+	&::before {
+		position: absolute;
+		content: '';
+		top: 13px;
+		left: 9px;
+		width: 9px;
+		height: 9px;
+		border-radius: 50%;
 
-//======================= end sttings ===============================
+	}
+}
+.profile-on {
+	&::before {
+		background-color: $green;
+	}	
+}
+.profile-off {
+	&::before {
+		background-color: $red;
+	}
+}
+.profile__aside-btn {
+	margin-top: 38px;
+}
+.profile__aside-message {
+	margin-bottom: 16px;
+	width: 100%;
+	height: 55px;
+	padding-top: 15px;
+	background-color: $text;
+	box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+	color: #ffffff;
+	font-size: 16px;
+	font-weight: 500;
+	text-align: center;
+	&::before {
+		content: "\f003";
+		font-family: 'icomoon';
+		font-size: 16px;
+		margin-right: 23px;
+	}
+}
+.profile__aside-following {
+	padding-top: 15px;
+	width: 100%;
+	height: 55px;
+	text-align: center;
+	background-color: $green;
+	box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+	color: #ffffff;
+	font-size: 16px;
+	font-weight: 700;
+}
+.profile__content {
+	width: 100%;
+}
+.profile__banner {
+	padding: 20px;
+	border: 1px solid #dedede;
+	background-color: #ffffff;
+	margin-bottom: 25px;
+}
+.profile__banner-images {	
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	min-height: 332px;
+}
+.profile__items {
+	display: flex;
+	border-top: 1px solid #dedede;
+	border-bottom: 1px solid #dedede;
+}
+.profile__item {
+	width: 25%;
+	background-color: #ffffff;
+	padding: 18px 5px 17px;
+	border-left: 1px solid #dedede;
+	font-size: 14px;
+	height: 80px;
+	&:last-child {
+		border-right: 1px solid #dedede;
+	}
+	&:nth-child(1) {
+		padding-left: 78px;
+	}
+	&:nth-child(2) {
+		padding-left: 49px;
+	}
+	&:nth-child(3) {
+		padding-left: 58px;
+	}
+	&:nth-child(4) {
+		padding-left: 69px;
+	}
+}
+.profile__item-title {
+	color: $bg;
+	font-weight: 500;
+}
+.profile__item-content {
+	color: #707070;
+	&.profile__item-sales {
+		color: #000000;
+	}
+}
+// .profile-settigs {
+
+// }
+.personal-box {
+	padding: 35px 44px 25px;
+	background-color: #ffffff;
+	border: 1px solid #dedede;
+}
+.personal-box__title {
+	font-size: 20px;
+	font-weight: 700;
+	color: $bg;
+	margin-bottom: 17px;
+}
+.personal-box__text {
+	p {
+		margin-bottom: 34px;
+		color: #707070;		
+	}
+}
+.personal-box__items {
+	margin-bottom: 39px;
+}
+// .personal-box__item {
+
+// }
+.personal-box__item-head {
+	display: flex;
+	justify-content: space-between;
+	font-size: 16px;
+	color: $bg;
+	margin-bottom: 16px;
+}
+.personal-box__item-name {	
+	font-weight: 500;
+	font-style: italic;
+	
+}
+.personal-box__item-number {
+	font-weight: 700;
+}
+.personal-box__item-line {
+	height: 15px;
+	border-radius: 4px;
+	background-color: #f4f4f4;
+	margin-bottom: 23px;
+	span {
+		display: block;
+		border-radius: 3px;
+		height: 15px;
+		background-image: url(../images/pro-bar.jpg);
+		background-repeat: repeat;
+	}
+}
+	.product-one__tabs.settings__tabs {
+	.tabs {
+		position: relative;
+		span {			
+			&:before {
+				position: absolute;
+				font-family: 'icomoon';
+				font-size: 14px;
+				color: #d0d0d0;
+				left: 24px;
+				top: 17;
+			}
+			&.tab-active:before {
+				color: $green;
+			}
+			// &:nth-child(1) {
+			// 	&:before {					
+			// 		content: "\f007";
+			// 	}
+			// }
+			// &:nth-child(2) {
+			// 	&:before {					
+			// 		content: "\f0b1";
+			// 	}
+			// }
+			// &:nth-child(3) {
+			// 	&:before {					
+			// 		content: "\f003";
+			// 	}
+			// }
+			// &:nth-child(4) {
+			// 	&:before {					
+			// 		content: "\f0e6";
+			// 	}
+			// }
+			// &:nth-child(5) {
+			// 	&:before {					
+			// 		content: "\f0c0";
+			// 	}
+			// }
+		}
+	}
+}
+//======================= end profile ================================
 @import '_media';
 
 
